website complete, need to fix the menu and some minor alignments

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,11 +14,10 @@ body {
   text-align: center;
 }
 
-
 /* HEADER */
 
 header {
-  display: fixed;
+  position: fixed;
   height: 69px;
 }
 
